# odin

./: Cargo.toml  README.md
src/: app.rs  cli.rs  log.rs  main.rs
src/app/: data.rs  loader.rs
src/app/data/: manufacturer.rs  model.rs  version.rs
