[package]
name = "odin"
version = "1.0.1"
authors = ["Meenakshi Sundaram V <vms20591@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9.3"
clap = "2.33.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
reqwest = { version = "0.10.6", features = ["blocking"] }
scraper = "0.12.0"
term_size = "0.3.2"